# NFT_Marketplace

./: Cargo.toml  README.md  index.html  style.css
.github/: workflows
src/: main.rs  route.rs
src/components/: card.rs  mod.rs  modal.rs  navbar.rs
src/components/HomeComponent/: collections.rs  creators.rs  first_home.rs  mod.rs  randing.rs
src/components/Layout/: footer.rs  mod.rs  navbar.rs
src/pages/: about.rs  home.rs  marketplace.rs  mod.rs
styles/: card.css  index.css  navbar.css  style.css
