[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.32"
wasm-bindgen-futures = "0.4"
gloo-net = "0.2"
yew_styles = { version="0.11", features=["button", "text", "navbar"] }